--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.10.12",
     "@mui/styled-engine-sc": "^5.10.6",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "next": "13.0.1",
     "react": "18.2.0",
