--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.10.12",
+    "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-table": "^7.8.0",
     "serve": "^14.1.0",
     "serve-build": "^0.1.0",
     "styled-components": "^5.3.6"
