--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.1.4",
     "react-table": "^7.8.0",
     "serve": "^14.1.0",
     "serve-build": "^0.1.0",
