--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "crypto-js": "^4.1.1",
     "next": "13.0.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
