--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.10.13",
     "@mui/styled-engine-sc": "^5.10.6",
     "axios": "^1.1.3",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.2",
     "crypto-js": "^4.1.1",
     "next": "13.0.1",
